--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend scripts for rewrite of Whizzimo site",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "debug": "node --inspect-brk index.js"
   },
   "repository": {
